# LSB

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  LSB_Implementation_Plan_v3.0.md  PHASE_STATUS.md  plan-a1-config-schema.html  plan-a2-a3-data-acquisition.html  plan-a4-c2-gates-1-4.html  plan-session-a1-config-schema.html  plan-session-a2-a3-data-pipeline.html  plan-session-a3b-btcusd-substitution.html  plan-session-a4-signal-engine-gates-1-4.html  plan-session-a5-gates-5-8-conjunction.html  plan-session-a6-backtest-core.html  plan-session-a7-simulated-broker.html  pyproject.toml
.githooks/: pre-commit
audit/: BTCUSD_audit.json  EURUSD_audit.json  GBPUSD_audit.json  XAUUSD_audit.json
config/: BOOM500.yaml  BTCUSD.yaml  EURUSD.yaml  GBPUSD.yaml  XAUUSD.yaml  spec.yaml  strategy.yaml
docs/: BUILD_PLAYBOOK.md  GATE_SPECIFICATION.md  LSB_System_Requirements_v2.0.docx  LSB_System_Requirements_v2.0.md  PHASE_STATUS.md  PROJECT_STATUS_AND_ISSUES.md  data_audit_report_BOOM500.md  data_audit_report_BTCUSD.md  data_audit_report_EURUSD.md  data_audit_report_XAUUSD.md
graphify-out/: .graphify_label_sig  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
migrations/: 001_core.sql  002_signal_reasons.sql
scripts/: apply_migrations.py  audit_history.py  calibrate_flat_atr.py  ci.ps1  convert_spec_docx.py  diag_structure_gap.py  diag_sweep_crosstab.py  diag_sweep_gap.py  diag_trend_structure.py  diag_trend_sweep.py  fetch_history.py  run_backtest.py  start_postgres.ps1  sweep_apex.py  (+1 more)
(+131 files in other folders)
