[project]
name = "lsb"
version = "0.0.1"
description = "LSB Strategy Bot — five-stage deterministic trading system (Blueprint v2.1)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
