[project]
name = "lsb"
version = "0.0.1"
description = "LSB Strategy Bot — Phase A: validate the liquidity sweep edge via deterministic walk-forward (Implementation Plan v3.0)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
